pyem (0.5.2) Tue, 29 Aug 2006 14:53:49 +0900

	* Add a class method to GM to create a model directly from
	w, mean and var values (uses decorator: python 2.4)
	* Add a plot1d method to GM to plot a GM in one dimension (where
	the confidence ell kind of plot does not make sense). This draws
	each Gaussian pdf, fill the area on the confidence interval
	(matplotlib is really cool)

-- David Cournapeau <david@ar.media.kyoto-u.ac.jp> 

pyem (0.5.2) Mon, 28 Aug 2006 13:20:13 +0900

	* Add a plot method to Gm class, so that it is easier
	to plot a GM model interactively (needs matplotlib)

-- David Cournapeau <david@ar.media.kyoto-u.ac.jp> 

pyem (0.5.2) Thu, 24 Aug 2006 19:42:28 +0900

	* put version to 0.5.2
	* Correct a bug with init method in GMM (change class method
	to object method).
	* modify the setup for a more flexible system

-- David Cournapeau <david@ar.media.kyoto-u.ac.jp> 

pyem (0.5.1) Thu, 17 Aug 2006 11:54:41 +0900

	* put version to 0.5.1
	* Update to last numpy (change axis args between 1.0b1 and 1.0b2,
	change type args of ones and zeros)

-- David Cournapeau <david@ar.media.kyoto-u.ac.jp> 

pyem (0.5) Fri, 04 Aug 2006 23:10:37 +0900

	* put version to 0.5.0
	* implement confidence interval using chi2

-- David Cournapeau <david@ar.media.kyoto-u.ac.jp> 

pyem (0.4) Fri, 04 Aug 2006 19:37:47 +0900

	* put version to 0.4.2
	* adapt to new version of numpy (1.0b2SVN)

-- David Cournapeau <david@ar.media.kyoto-u.ac.jp> 

pyem (0.4) Fri, 14 Jul 2006 17:49:57 +0900

	* put version to 0.4.1
	* change some import due to recent changes in 
	numpy

-- David Cournapeau <david@ar.media.kyoto-u.ac.jp> 

pyem (0.4) Fri, 14 Jul 2006 16:24:05 +0900

	* put version to 0.4
	* Heavy refactoring of EM and GMM into classes (see below)
	* add a module gauss_mix, which implements Gaussian Mixtures.
	* GMM is now a class, which is initialized using a Gaussian Mixture.
	a GMM can be trained.

-- David Cournapeau <david@ar.media.kyoto-u.ac.jp> 
