@@ -2,8 +2,11 @@
 #include <stdio.h>
 #include <math.h>
 
+/*
+ * use va for caching, so its content is modified
+ */
 int gden_diag(const double *in, const size_t n, const size_t d, 
-        const double* mu, const double* inva, double* out)
+        const double* mu, double* va, double* out)
 {
     size_t  j, i;
     double  fac = 1.0;
@@ -13,8 +16,9 @@ int gden_diag(const double *in, const size_t n, const size_t d,
      * Cache some precomputing
      */
     for(j = 0; j < d; ++j) {
-        fac     *= sqrt(inva[j] / (2 * M_PI) );
-        //printf("inva[%d] is %f, fac %f\n", j, inva[j], fac);
+        va[j]   = 0.5/va[j];
+        fac     *= sqrt(va[j] / (M_PI) );
+        va[j]   *= -1.0;
     }
 
     /*
@@ -23,11 +27,11 @@ int gden_diag(const double *in, const size_t n, const size_t d,
     for(i = 0; i < n; ++i) {
         acc = 0;
         for(j = 0; j < d; ++j) {
-            tmp = (in[d * i + j] - mu[j]);
-            acc += tmp * tmp * -0.5 * inva[j];
+            tmp = (in[i *d + j] - mu[j]);
+            acc += tmp * tmp * va[j];
         }
         out[i]  = exp(acc) * fac;
     }
-
+ 
     return 0;
 }
